<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_meeting_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Scrollview for all screen -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <!-- Date picker button -->
    <Button
        android:id="@+id/btn_date_picker"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_calendar_month_24"
        android:hint="@string/date_picker_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Hour pickers box -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_hour_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_date_picker">

    <!-- Hour picker start button -->
    <Button
        android:id="@+id/btn_hour_picker_start"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
        android:hint="@string/hour_picker_btn_start"
        app:layout_constraintEnd_toStartOf="@id/btn_hour_picker_end"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Hour picker end button -->
    <Button
        android:id="@+id/btn_hour_picker_end"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
        android:hint="@string/hour_picker_btn_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_hour_picker_start"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Spinner box -->
    <LinearLayout
        android:id="@+id/rooms_available_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/spinner_border"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hour_picker">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rooms_available_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:drawableStart="@drawable/ic_baseline_meeting_room_24"
            android:hint="@string/available_rooms"
            android:textColorHint="@color/mtrl_indicator_text_color"
            android:textSize="16sp" />


        <Spinner
            android:id="@+id/spinner_rooms_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

    </LinearLayout>

    <!-- Participants text input box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_participants"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_subject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_ed_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_add_24"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/participants"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:isScrollContainer="true"
                    app:layout_constraintBottom_toBottomOf="@id/ti_participants"
                    app:layout_constraintEnd_toEndOf="@id/ti_participants"
                    app:layout_constraintStart_toEndOf="@id/chip_group_participants"
                    app:layout_constraintTop_toTopOf="@id/ti_participants">
                </com.google.android.material.textfield.TextInputEditText>

        <!-- Chip group box -->
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_participants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:foregroundGravity="top"
            android:isScrollContainer="true"
            app:layout_constraintStart_toStartOf="@id/ti_participants"
            app:layout_constraintTop_toTopOf="@id/ti_participants" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Subject -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="@string/subject"
        app:layout_constraintTop_toBottomOf="@id/rooms_available_linear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_ed_subject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_topic_24"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Add meeting button -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/btn_add_meeting"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:hint="@string/validation_btn"
    android:textAlignment="center"
    android:textColorHint="@color/white"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
     />

</androidx.constraintlayout.widget.ConstraintLayout>